--- a/templates/compra/index.html.twig
+++ b/templates/compra/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Compra index</h1>
 
-    <table class="table">
+    <table id="myTable" class="table display">
         <thead>
             <tr>
                 <th>Id</th>
@@ -41,4 +41,9 @@
     </table>
 
     <a class="btn btn-primary" href="{{ path('app_compra_new') }}">Create new</a>
+    <script>
+        $(document).ready( function () {
+            $('#myTable').DataTable();
+        } );
+    </script>
 {% endblock %}
